encoderをjersey依存のものからDatatypeConverterに変更. savaImageが動作確認